# rust-aec

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: README.md  README.zh-CN.md  rust-aec-handoff.md
examples/: decode_aec_payload.rs  stream_decode_aec_payload.rs
src/: bitreader.rs  decoder.rs  error.rs  lib.rs  params.rs
tests/: oracle_data_grib2.rs  streaming_decoder.rs
